--- a/templates/edit_zone_templ.html
+++ b/templates/edit_zone_templ.html
@@ -52,6 +52,10 @@
             </td>
         </tr>
     </table>
+    <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans 'Commit changes' %}">
+    <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans 'Reset changes' %}">
+    <input class="btn btn-secondary btn-sm" type="submit" name="update_zones" value="{% trans 'Update zones' %}">
+
     <table>
         <tr>
             <td colspan="6"><br><b>{% trans 'Hint:' %}</b></td>
@@ -97,10 +101,7 @@
             <td><input class="form-control form-control-sm" type="text" name="templ_descr" value=""></td>
         </tr>
     </table>
-    <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans 'Commit changes' %}">
-    <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans 'Reset changes' %}">
     <input class="btn btn-secondary btn-sm" type="submit" name="save_as" value="{% trans 'Save as template' %}">
-    <input class="btn btn-secondary btn-sm" type="submit" name="update_zones" value="{% trans 'Update zones' %}">
 </form>
 <hr>
 
@@ -121,7 +122,7 @@
         </tr>
     </table>
     <div class="pt-3">
-        <input class="btn btn-primary btn-sm" type="submit" name="edit" value="{% trans 'Commit changes' %}">
+        <input class="btn btn-primary btn-sm" type="submit" name="edit" value="{% trans 'Update' %}">
     </div>
 </form>
 <div class="pt-3">
