--- a/templates/delete_zone_templ_record.html
+++ b/templates/delete_zone_templ_record.html
@@ -1,4 +1,4 @@
-<h5 class="mb-3">{% trans 'Delete record in zone' %} "{{ templ_details['name'] }}"</h5>
+<h5 class="mb-3">{% trans 'Delete record in zone template' %} "{{ templ_details['name'] }}"</h5>
 
 <table class="table table-striped table-sm">
     <thead>
