--- a/templates/dnssec_ds_dnskey.html
+++ b/templates/dnssec_ds_dnskey.html
@@ -1,4 +1,4 @@
-<h5 class="mb-3">{% trans 'DNSSEC public records for zone' %} "{{ domain_name }}"</h5>
+<h5 class="mb-3">{% trans 'DNSSEC public records for zone' %} "<a href='dnssec.php?id={{ zone_id }}'>{{ domain_name }}</a>"</h5>
 
 <h5 class="mb-3">{% trans 'DNSKEY' %}</h5>
 {% for record in dnskey_records %}
@@ -10,6 +10,3 @@
 {% for record in ds_records %}
 {{ record }}<br/>
 {% endfor %}
-
-<br>
-<br/><a href='dnssec.php?id={{ zone_id }}'>Back to DNSSEC {{ domain_name }}</a>
