--- a/templates/dnssec.html
+++ b/templates/dnssec.html
@@ -1,4 +1,8 @@
+{% if idn_zone_name %}
+<h5 class="mb-3">{% trans 'DNSSEC keys for zone' %} "{{ idn_zone_name }}" ({{ domain_name }})</h5>
+{% else %}
 <h5 class="mb-3">{% trans 'DNSSEC keys for zone' %} "{{ domain_name }}"</h5>
+{% endif %}
 
 <table class="table table-striped table-hover table-sm">
     <tr>
