--- a/templates/edit.html
+++ b/templates/edit.html
@@ -144,7 +144,13 @@
             <td>{% trans 'TTL' %}</td>
         </tr>
         <tr>
-            <td><input class="form-control form-control-sm" type="text" name="name" value="">.{{ zone_name }}</td>
+            <td><input class="form-control form-control-sm" type="text" name="name" value="">.
+                {% if idn_zone_name %}
+                {{ idn_zone_name }}
+                {% else %}
+                {{ zone_name }}
+                {% endif %}
+            </td>
             <td>IN</td>
             <td>
                 <select class="form-select form-select-sm" name="type">
