--- a/templates/dnssec.html
+++ b/templates/dnssec.html
@@ -1,7 +1,7 @@
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans 'DNSSEC keys for zone' %} "{{ idn_zone_name }}" ({{ domain_name }})</h5>
+<h5 class="mb-3">{% trans 'DNSSEC keys for zone' %} "<a href="edit.php?id={{ zone_id }}">{{ idn_zone_name }}</a>" ({{ domain_name }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans 'DNSSEC keys for zone' %} "{{ domain_name }}"</h5>
+<h5 class="mb-3">{% trans 'DNSSEC keys for zone' %} "<a href="dnssec.php?id={{ zone_id }}">{{ domain_name }}</a>"</h5>
 {% endif %}
 
 <table class="table table-striped table-hover table-sm">
