--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
         {% if custom_footer %}
             {% include ('custom/footer.html') %}
         {% else %}
-            <a href="https://www.poweradmin.org/">a complete(r) <strong>poweradmin</strong>
+            <a href="https://www.poweradmin.org/">a complete(r) <strong>Poweradmin</strong>
                 {% if version %}
                     v{{ version }}
                 {% endif %}
