--- a/install/templates/footer.html
+++ b/install/templates/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="footer py-3 bg-light border">
     <div class="container">
-        <a href="https://www.poweradmin.org">a complete(r) <strong>poweradmin</strong></a>
+        <a href="https://www.poweradmin.org">a complete(r) <strong>Poweradmin</strong></a>
     </div>
 </footer>
 
