--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -1,4 +1,9 @@
+{% if idn_zone_name %}
+<h5 class="mb-3">{% trans 'Add record to zone' %} "<a href="edit.php?id={{ zone_id }}">{{ idn_zone_name }}</a>" ({{ zone_name }})</h5>
+{% else %}
 <h5 class="mb-3">{% trans 'Add record to zone' %} "<a href="edit.php?id={{ zone_id }}">{{ zone_name }}</a>"</h5>
+{% endif %}
+
 <form class="needs-validation" method="post" novalidate>
     <input type="hidden" name="domain" value="{{ zone_id }}">
     <table class="table table-striped table-sm">
@@ -11,8 +16,7 @@
             <td>{% trans 'TTL' %}</td>
         </tr>
         <tr>
-            <td><input class="form-control form-control-sm" type="text" name="name" value="{{ name }}">.{{ zone_name }}
-            </td>
+            <td><input class="form-control form-control-sm" type="text" name="name" value="{{ name }}">.{{ idn_zone_name ?: zone_name }}</td>
             <td>IN</td>
             <td>
                 <select class="form-select form-select-sm" name="type">
