--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -1,4 +1,8 @@
+{% if idn_zone_name %}
+<h5 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ idn_zone_name }}</a>" ({{ zone_name }})</h5>
+{% else %}
 <h5 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ zone_name }}</a>"</h5>
+{% endif %}
 
 <table class="table table-striped table-sm">
     <thead>
