--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -1,4 +1,9 @@
-<h5 class="mb-3">{% trans 'Edit record in zone' %}</h5>
+{% if idn_zone_name %}
+<h5 class="mb-3">{% trans 'Edit record in zone' %} "<a href="edit.php?id={{ zid }}">{{ idn_zone_name }}</a>" ({{ zone_name }})</h5>
+{% else %}
+<h5 class="mb-3">{% trans 'Edit record in zone' %} "<a href="edit.php?id={{ zid }}">"{{ zone_name }}</a>"</h5>
+{% endif %}
+
 <form class="needs-validation" method="post" action="edit_record.php?id={{ record_id }}" novalidate>
     <table class="table table-striped table-hover table-sm">
         <thead>
@@ -24,7 +29,7 @@
                 <input type="hidden" name="rid" value="{{ record_id }}">
                 <input type="hidden" name="zid" value="{{ zid }}">
                 <input class="form-control form-control-sm" type="text" name="name" value="{{ record['record_name'] }}">
-                .{{ zone_name }}
+                .{{ idn_zone_name ?: zone_name }}
             </td>
             <td>IN</td>
             <td>
