--- a/templates/list_supermasters.html
+++ b/templates/list_supermasters.html
@@ -1,5 +1,6 @@
 <h5 class="mb-3">{% trans 'List supermasters' %}</h5>
 <table class="table table-striped table-hover table-sm">
+    {% if supermasters %}
     <thead>
     <tr>
         <th>{% trans 'IP address of supermaster' %}</th>
@@ -9,7 +10,6 @@
     </tr>
     </thead>
     <tbody>
-    {% if supermasters %}
     {% for server in supermasters %}
     <tr>
         <td>{{ server['master_ip'] }}</td>
@@ -29,9 +29,8 @@
     {% endfor %}
     {% else %}
     <tr>
-        <td>&nbsp;</td>
         <td colspan="3">
-            {% trans 'There are no zones to show in this listing.' %}
+            {% trans 'There are no supermasters to show in this listing.' %}
         </td>
     </tr>
     {% endif %}
