--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -1,7 +1,21 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">Home</a></li>
+        <li class="breadcrumb-item"><a href="edit.php?id={{ zone_id }}">
+            {% if idn_zone_name %}
+            {{ idn_zone_name }}
+            {% else %}
+            {{ zone_info['name'] }}
+            {% endif %}
+        </a></li>
+        <li class="breadcrumb-item active" aria-current="page">Delete Zone</li>
+    </ol>
+</nav>
+
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans 'Edit record in zone' %} "<a href="edit.php?id={{ zid }}">{{ idn_zone_name }}</a>" ({{ zone_name }})</h5>
+<h5 class="mb-3">{% trans 'Edit record in zone' %} "{{ idn_zone_name }}" ({{ zone_name }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans 'Edit record in zone' %} "<a href="edit.php?id={{ zid }}">"{{ zone_name }}</a>"</h5>
+<h5 class="mb-3">{% trans 'Edit record in zone' %} "{{ zone_name }}"</h5>
 {% endif %}
 
 <form class="needs-validation" method="post" action="edit_record.php?id={{ record_id }}" novalidate>
