--- a/style/spark.css
+++ b/style/spark.css
@@ -137,3 +137,13 @@ a:hover {
 .form-select.is-valid, .was-validated .form-select:valid {
     border-color: #ced4da;
 }
+
+.breadcrumb {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0.75rem 1rem;
+    margin-bottom: 1rem;
+    list-style: none;
+    background-color: #242424;
+    border-radius: 0.25rem;
+}
