--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="users.php">{% trans 'Users' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Add user' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Add user' %}</h5>
 <form class="needs-validation" method="post" action="add_user.php" novalidate>
     <table>
