--- a/templates/add_zone_slave.html
+++ b/templates/add_zone_slave.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Add slave zone' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Add slave zone' %}</h5>
 <form class="needs-validation" method="post" action="add_zone_slave.php" novalidate>
     <table>
