--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,3 +1,10 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Change password' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Change password' %}</h5>
 <form class="needs-validation" method="post" action="change_password.php" novalidate>
     <div class="row g-2 col-sm-4">
