--- a/templates/dnssec_add_key.html
+++ b/templates/dnssec_add_key.html
@@ -1,7 +1,25 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item">
+            {% if idn_zone_name %}
+            <a href="edit.php?id={{ zone_id }}">{{ idn_zone_name }}</a>
+            {% else %}
+            <a href="edit.php?id={{ zone_id }}">{{ domain_name }}</a>
+            {% endif %}
+        </li>
+        <li class="breadcrumb-item">
+            <a href="dnssec.php?id={{ zone_id }}">{% trans 'DNSSEC' %}</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Add key' %}</li>
+    </ol>
+</nav>
+
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans 'Add key for zone' %} "<a href="dnssec.php?id={{ zone_id }}">{{ idn_zone_name }}</a>" ({{ domain_name }})</h5>
+<h5 class="mb-3">{% trans 'Add key for zone' %} "{{ idn_zone_name }}" ({{ domain_name }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans 'Add key for zone' %} "<a href="dnssec.php?id={{ zone_id }}">{{ domain_name }}</a>"</h5>
+<h5 class="mb-3">{% trans 'Add key for zone' %} "{{ domain_name }}"</h5>
 {% endif %}
 
 <form class="needs-validation" method="post" action="dnssec_add_key.php?id={{ zone_id }}" novalidate>
