--- a/templates/dnssec_delete_key.html
+++ b/templates/dnssec_delete_key.html
@@ -1,3 +1,23 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="list_zones.php">{% trans 'Zones' %}</a></li>
+        <li class="breadcrumb-item">
+            {% if idn_zone_name %}
+            <a href="edit.php?id={{ zone_id }}">{{ idn_zone_name }}</a>
+            {% else %}
+            <a href="edit.php?id={{ zone_id }}">{{ domain_name }}</a>
+            {% endif %}
+        </li>
+        <li class="breadcrumb-item">
+            <a href="dnssec.php?id={{ zone_id }}">{% trans 'DNSSEC' %}</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+            {% trans 'Delete key' %}
+        </li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Delete zone key' %}</h5>
 {% if key_info[5] %}
 {% set active = 'Yes' %}
