--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -1,3 +1,11 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.php">{% trans 'Home' %}</a></li>
+        <li class="breadcrumb-item"><a href="users.php">{% trans 'Users' %}</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans 'Permission templates' %}</li>
+    </ol>
+</nav>
+
 <h5 class="mb-3">{% trans 'Permission templates' %}</h5>
 <table class="table table-striped table-hover table-sm">
     <thead>
